--- a/index.html
+++ b/index.html
@@ -4,75 +4,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Schmidt Analytics</title>
+  <title>Jouw Data-Partner</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #002060;
-      text-align: center;
-      padding: 40px 20px;
-    }
-    header img {
-      max-width: 220px;
-      height: auto;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-top: 20px;
-    }
-    h2 {
-      color: #c00000;
-      font-weight: normal;
-      margin-bottom: 10px;
-    }
-    .tagline {
-      font-size: 1.2em;
-      color: #2e8b8b;
-      margin-bottom: 30px;
-    }
-    .intro {
-      max-width: 600px;
-      margin: 30px auto;
-      font-size: 1.2em;
-    }
-    .cta-button {
-      background-color: #2e8b8b;
-      color: white;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 8px;
-      font-size: 1em;
-      cursor: pointer;
-      text-decoration: none;
-    }
-    .cta-button:hover {
-      background-color: #257373;
-    }
-    footer {
-      margin-top: 50px;
-      font-size: 0.9em;
-      color: #666;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
+    header, section, footer { padding: 20px; }
+    header { background-color: #f4f4f4; text-align: center; }
+    nav { margin-top: 10px; }
+    .cta-button { background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; }
+    .services, .cases, .contact, .trust { background-color: #fafafa; margin-top: 10px; }
+    .service, .case, .testimonial { margin-bottom: 20px; }
+    footer { text-align: center; background-color: #eee; }
   </style>
 </head>
 <body>
   <header>
-    <img src="Logo.png.png" alt="Schmidt Analytics logo">
-    <h1>Schmidt Analytics</h1>
-    <h2>Business Intelligence & Data Solutions</h2>
-    <div class="tagline">Uw partner in een datagedreven wereld</div>
+    <h1>Wij helpen B2B-bedrijven betere beslissingen nemen met slimme data-analyse</h1>
+    <a href="#contact" class="cta-button">Plan een gratis consult</a>
   </header>
 
-  <section class="intro">
-    <p>Ik help bedrijven betere beslissingen nemen met data. Van dashboarding en datamodellering tot performance-optimalisatie van BI-platforms — maatwerk voor elke organisatie.</p>
+  <section class="services">
+    <h2>Onze diensten</h2>
+    <div class="service">
+      <h3>Data-analyse op maat</h3>
+      <p>Inzicht in verborgen verbanden en trends die jouw organisatie vooruithelpen.</p>
+    </div>
+    <div class="service">
+      <h3>Dashboarding & visualisatie</h3>
+      <p>Realtime inzicht in je KPI’s, op een visuele en begrijpelijke manier.</p>
+    </div>
+    <div class="service">
+      <h3>Data-automatisering</h3>
+      <p>Minder handwerk, meer grip, en structurele tijdswinst.</p>
+    </div>
+    <div class="service">
+      <h3>Advies & strategie</h3>
+      <p>Van datavraagstuk naar heldere roadmap op maat.</p>
+    </div>
   </section>
 
-  <a href="mailto:info@jouwdomein.nl" class="cta-button">Neem contact op</a>
+  <section class="target-audience">
+    <h2>Voor wie wij werken</h2>
+    <p>Wij zijn actief in sectoren als logistiek, retail, productie en finance.</p>
+    <p><strong>Klantervaring:</strong> “Fijn dat er wordt meegedacht vanuit onze business!” – Klant X</p>
+  </section>
+
+  <section class="cases">
+    <h2>Voorbeelden uit de praktijk</h2>
+    <div class="case">
+      <h3>Logistiek</h3>
+      <p>Hoe wij een logistiek bedrijf hielpen 15% te besparen via voorraadoptimalisatie.</p>
+    </div>
+    <div class="case">
+      <h3>Onderwijs</h3>
+      <p>Hoe een onderwijsinstelling dankzij dashboarding realtime inzicht kreeg in leerlingenstromen.</p>
+    </div>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Neem contact op</h2>
+    <p>We denken graag met je mee. Bel ons, mail ons of plan direct een afspraak in.</p>
+    <p><strong>Email:</strong> info@jouwdatanbedrijf.nl</p>
+    <p><strong>Telefoon:</strong> 06-12345678</p>
+    <a href="https://calendly.com/jouwdatanbedrijf" class="cta-button">Plan een afspraak</a>
+  </section>
+
+  <section class="trust">
+    <h2>Waarom klanten voor ons kiezen</h2>
+    <div class="testimonial">
+      <p>“We hadden in no-time inzicht in onze processen – aanrader!”</p>
+    </div>
+    <p>Partner van Microsoft, gecertificeerd in Power BI & Google Analytics.</p>
+    <p>Opgericht door [Jouw Naam], met jarenlange ervaring in data en bedrijfsadvies.</p>
+  </section>
 
   <footer>
-    <p>© 2025 Schmidt Analytics. Alle rechten voorbehouden.</p>
+    <p>&copy; 2025 Jouw Data-Bureau. Alle rechten voorbehouden.</p>
   </footer>
 </body>
 </html>
