--- a/index.html
+++ b/index.html
@@ -1,23 +1,80 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jouw Data-Partner</title>
+  <title>Schmidt Analytics</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Darker+Grotesque&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
-    header, section, footer { padding: 20px; }
-    header { background-color: #f4f4f4; text-align: center; }
-    nav { margin-top: 10px; }
-    .cta-button { background-color: #0073e6; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; }
-    .services, .cases, .contact, .trust { background-color: #fafafa; margin-top: 10px; }
-    .service, .case, .testimonial { margin-bottom: 20px; }
-    footer { text-align: center; background-color: #eee; }
+    body {
+      font-family: 'Darker Grotesque', sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header, section, footer {
+      padding: 20px;
+    }
+    header {
+      background-color: #f4f4f4;
+      text-align: center;
+    }
+    header h1 {
+      font-family: 'Orbitron', sans-serif;
+      color: #000099;
+    }
+    .cta-button {
+      background-color: #0073e6;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    .services, .cases, .contact, .trust {
+      background-color: #fafafa;
+      margin-top: 10px;
+    }
+    .service, .case, .testimonial {
+      margin-bottom: 20px;
+    }
+    .analytics {
+      font-family: 'Darker Grotesque', sans-serif;
+      color: #CC0000;
+      font-size: 24px;
+    }
+    footer {
+      text-align: center;
+      background-color: #eee;
+    }
+    .logo {
+      max-width: 200px;
+      margin: 10px auto;
+    }
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 50px;
+      font-size: 18px;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+      z-index: 1000;
+    }
+    .whatsapp-button img {
+      width: 24px;
+      height: 24px;
+      margin-right: 8px;
+    }
   </style>
 </head>
 <body>
   <header>
+    <img src="/mnt/data/Logo.png.png" alt="Schmidt Analytics logo" class="logo">
     <h1>Wij helpen B2B-bedrijven betere beslissingen nemen met slimme data-analyse</h1>
     <a href="#contact" class="cta-button">Plan een gratis consult</a>
   </header>
@@ -78,7 +135,11 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Jouw Data-Bureau. Alle rechten voorbehouden.</p>
+    <p>&copy; 2025 Schmidt Analytics. Alle rechten voorbehouden.</p>
   </footer>
+
+  <a href="https://wa.me/31612345678" class="whatsapp-button" target="_blank">
+    <img src="https://web.whatsapp.com/img/favicon/1x/favicon.png" alt="WhatsApp"> Chat met ons
+  </a>
 </body>
 </html>
