--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 </head>
 <body>
   <header>
-    <img src="/mnt/data/Logo.png.png" alt="Schmidt Analytics logo" class="logo">
+    <img src="https://raw.githubusercontent.com/SchmidtAnalytics
+SchmidtAnalytics.github.io/main/Logo.png.png" alt="Schmidt Analytics logo" class="logo">
     <h1>Wij helpen B2B-bedrijven betere beslissingen nemen met slimme data-analyse</h1>
     <a href="#contact" class="cta-button">Plan een gratis consult</a>
   </header>
@@ -138,8 +139,8 @@
     <p>&copy; 2025 Schmidt Analytics. Alle rechten voorbehouden.</p>
   </footer>
 
-  <a href="https://wa.me/31612345678" class="whatsapp-button" target="_blank">
-    <img src="https://web.whatsapp.com/img/favicon/1x/favicon.png" alt="WhatsApp"> Chat met ons
+  <a href="https://wa.me/31624385604" class="whatsapp-button" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"> Chat met ons
   </a>
 </body>
 </html>
