--- a/index.html
+++ b/index.html
@@ -196,14 +196,13 @@ form input:focus, form textarea:focus {
 </head>
 <body>
   <header>
-    <img src="$1" alt="Schmidt Analytics logo" loading="lazy">
-    <nav>$1
+    <img src="/SchmidtAnalytics.github.io/Logo.png.png" alt="Schmidt Analytics logo" loading="lazy">
+    <nav>
       <a href="#cta" class="cta-link" style="background-color: var(--accent); color: white; padding: 0.5rem 1rem; border-radius: 5px; margin-left: 1rem;">Vrijblijvend contact</a>
   </header>
 
   <section class="hero" data-aos="fade-up">
     <h1 data-nl="Uw partner in een datagedreven wereld" data-en="Your partner in a data-driven world">Uw partner in een datagedreven wereld</h1>
-  $1
 
   <hr style="border: none; border-top: 2px solid var(--support); width: 80%; margin: 3rem auto; opacity: 0; transform: translateY(20px); transition: all 0.6s ease;" class="animated-divider">
   <section class="section" id="testimonials" data-aos="fade-up">
@@ -214,7 +213,7 @@ form input:focus, form textarea:focus {
         Schmidt Analytics hielp ons snel inzicht te krijgen in onze data. Dankzij hun maatwerkrapportages kunnen we nu beter sturen op prestaties.
       </p>
       <div style="display: flex; align-items: center; gap: 10px;">
-        <img src="$1" alt="$2" style="height: 30px;" loading="lazy">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Philips_logo_new.svg/120px-Philips_logo_new.svg.png" alt="Philips logo" style="height: 30px;" loading="lazy">
         <cite>- Peter de Vries, Operationeel Manager bij Philips</cite>
       </div>
     </blockquote>
@@ -421,7 +420,5 @@ form input:focus, form textarea:focus {
 </body>
 </html>
 
-</body>
-</html>
 
 
