--- a/index.html
+++ b/index.html
@@ -42,22 +42,57 @@
       position: sticky;
       top: 0;
       background-color: white;
-      padding: 0.5rem;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
       border-bottom: 1px solid #ccc;
       z-index: 1000;
     }
 
-    nav a {
+    .nav-container {
+      max-width: 1000px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.5rem 1rem;
+    }
+
+    .menu-toggle {
+      display: none;
+      font-size: 1.5rem;
+      background: none;
+      border: none;
+      cursor: pointer;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 1.5rem;
+    }
+
+    .nav-links a {
       text-decoration: none;
       color: var(--primary);
       font-weight: bold;
     }
 
-    nav a:hover {
+    .nav-links a:hover {
       color: var(--accent);
+    }
+
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+
+      .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: white;
+        padding: 1rem;
+      }
+
+      .nav-links.active {
+        display: flex;
+      }
     }
 
     section {
@@ -117,11 +152,6 @@
       section {
         padding: 1.5rem 1rem;
       }
-
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
     }
   </style>
 </head>
@@ -132,10 +162,15 @@
   </header>
 
   <nav>
-    <a href="#home">Home</a>
-    <a href="#diensten">Diensten</a>
-    <a href="#over-ons">Over ons</a>
-    <a href="#contact">Contact</a>
+    <div class="nav-container">
+      <button class="menu-toggle" aria-label="Menu">&#9776;</button>
+      <div class="nav-links" id="navLinks">
+        <a href="#home">Home</a>
+        <a href="#diensten">Diensten</a>
+        <a href="#over-ons">Over ons</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
   </nav>
 
   <section id="home">
@@ -172,8 +207,17 @@
   </section>
 
   <footer>
-    &copy; 2025 Schmidt Analytics — info@schmidt-analytics.nl
+    &copy; 2025 Schmidt Analytics B.V.
   </footer>
+
+  <script>
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navLinks = document.getElementById('navLinks');
+
+    menuToggle.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    });
+  </script>
 
 </body>
 </html>
