--- a/index.html
+++ b/index.html
@@ -118,13 +118,20 @@
       font-size: 1rem;
       border-radius: 30px;
       cursor: pointer;
-      margin-top: 1.5rem;
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
+      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+      z-index: 999;
     }
 
     .cta-button:hover {
       background-color: var(--primary);
+      transform: scale(1.05);
+    }
+
+    .cta-fixed {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
     }
 
     #over-ons {
@@ -144,13 +151,20 @@
         font-size: 1.5rem;
       }
 
-      .cta-button {
-        width: 100%;
-        padding: 1rem;
+      .cta-fixed {
+        right: 1rem;
+        bottom: 1rem;
+        padding: 1rem 1.5rem;
+        font-size: 0.9rem;
       }
 
       section {
         padding: 1.5rem 1rem;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: center;
       }
     }
   </style>
@@ -178,7 +192,6 @@
     <p>
       Schmidt Analytics is gespecialiseerd in data-analyse, data engineering, Power BI-ontwikkeling en advies. Wij bouwen oplossingen vanuit de vraag – niet vanuit de techniek.
     </p>
-    <a href="#contact"><button class="cta-button">Neem contact op</button></a>
   </section>
 
   <section id="diensten">
@@ -207,9 +220,15 @@
   </section>
 
   <footer>
-    &copy; 2025 Schmidt Analytics B.V.
+    &copy; 2025 Schmidt Analytics — info@schmidt-analytics.nl
   </footer>
 
+  <!-- Vaste call-to-action knop -->
+  <a href="#contact">
+    <button class="cta-button cta-fixed">Neem contact op</button>
+  </a>
+
+  <!-- Script voor mobiel menu -->
   <script>
     const menuToggle = document.querySelector('.menu-toggle');
     const navLinks = document.getElementById('navLinks');
