--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
   </section>
 
   <footer>
-    &copy; 2025 Schmidt Analytics — info@schmidt-analytics.nl
+    &copy; 2025 Schmidt Analytics B.V.
   </footer>
 
   <!-- Vaste call-to-action knop -->
   <a href="#contact">
-    <button class="cta-button cta-fixed">Neem contact op</button>
+    <button class="cta-button cta-fixed">Vragen? We komen graag met je in contact! </button>
   </a>
 
   <!-- Script voor mobiel menu -->
