--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #002F9C;
-      --accent: #D00000;
-      --support: #65A9A4;
+      --primary: #000099;   /* Donkerblauw */
+      --accent: #CC0000;    /* Rood */
+      --support: #67AB9F;   /* Groen */
       --bg: #F9F9F9;
       --text: #222;
     }
@@ -177,7 +177,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 47, 156, 0.8);
+      background: rgba(0, 0, 153, 0.8); /* aangepast naar huisstijl blauw */
       display: none;
       justify-content: center;
       align-items: center;
@@ -359,3 +359,4 @@
 
 </body>
 </html>
+
