--- a/index.html
+++ b/index.html
@@ -328,26 +328,8 @@
     </p>
   </section>
 
-  <section id="diensten">
-    <h2>Diensten</h2>
-    <ul>
-      <li><strong>Data-analyse</strong>: inzichten uit data halen om beter te sturen.</li>
-      <li><strong>Data-engineering</strong>: betrouwbare infrastructuur en dataverwerking opzetten.</li>
-      <li><strong>Power BI-ontwikkeling</strong>: dashboards en rapportages op maat.</li>
-      <li><strong>Microsoft Fabric</strong>: moderne, schaalbare dataplatformoplossingen.</li>
-      <li><strong>Advies & Strategie</strong>: begeleiding naar een datagedreven organisatie.</li>
-    </ul>
-  </section>
-
-  <section id="over-ons">
-    <h2>Over ons</h2>
-    <p>
-      Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
-    </p>
-  </section>
-
-<section id="testimonials">
-  <h2>Wat zeggen onze klanten?</h2>
+  <section id="testimonials">
+  <h2>Wat zeggen onze partners?</h2>
   <div class="testimonial-carousel" id="testimonialCarousel">
 
     <div class="testimonial active">
@@ -385,6 +367,24 @@
 
   </div>
 </section>
+
+  <section id="diensten">
+    <h2>Diensten</h2>
+    <ul>
+      <li><strong>Data-analyse</strong>: inzichten uit data halen om beter te sturen.</li>
+      <li><strong>Data-engineering</strong>: betrouwbare infrastructuur en dataverwerking opzetten.</li>
+      <li><strong>Power BI-ontwikkeling</strong>: dashboards en rapportages op maat.</li>
+      <li><strong>Microsoft Fabric</strong>: moderne, schaalbare dataplatformoplossingen.</li>
+      <li><strong>Advies & Strategie</strong>: begeleiding naar een datagedreven organisatie.</li>
+    </ul>
+  </section>
+
+  <section id="over-ons">
+    <h2>Over ons</h2>
+    <p>
+      Wij zijn een team van data-experts met passie voor eenvoud en effectiviteit. Onze aanpak is pragmatisch: we beginnen bij uw vraag en bouwen van daaruit een passende oplossing. Ons doel is om organisaties écht datagedreven te laten werken.
+    </p>
+  </section>
 
   <section id="contact">
     <h2>Contact</h2>
